# packtrack-mvp

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml  netlify.toml  pyproject.toml  render.yaml
api/: Dockerfile  __init__.py  alembic.ini  requirements.txt
api/alembic/: env.py
api/app/: __init__.py  config.py  constants.py  main.py
api/scripts/: __init__.py  export_training_samples_jsonl.py  labelstudio_to_spacy.py  pilot_weekly_snapshot.py  seed_taxonomy.py  train_spacy_ner.py
api/training/: spacy_config.cfg
data/defra/: UK DEFRA.xlsx
docs/: PackTrack_Plan.md
docs/labelstudio/: config.xml  sample_export.json
docs/ml/: NER_TRAINING.md
docs/pilot/: DATA_REQUIREMENTS.md  (+8 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: backup_minio.sh  backup_postgres.sh  restore_minio.sh  restore_postgres.sh
tests/: test_admin_pilot_metrics.py  test_alembic_chain.py  test_classification_v1.py  test_defra_schema.py  test_demo_endpoints.py  test_export_training_samples_jsonl.py  test_extraction_v1.py  test_fixture_ab_no_regression.py  test_fixture_metrics_thresholds.py  test_hardening_idempotency_tenant.py  test_health_endpoints.py  test_ingestion_flow.py  test_invoice_fixture_regression.py  test_labelstudio_to_spacy.py  test_metrics_summary.py  test_ner_gating_provenance.py  test_ocr_outputs.py  test_pipeline_integration.py  test_preprocess_pdf.py  test_review_workflow.py  test_worker_pipeline_stub.py
worker/: Dockerfile  __init__.py  requirements.txt
(+78 files in other folders)
