[project]
name = "packtrack-mvp"
version = "0.1.0"
description = "Local-first PackTrack pilot scaffold"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.2.0",
  "openpyxl>=3.1.5",
  "python-multipart>=0.0.18",
  "pydantic-settings>=2.6.0",
  "minio>=7.2.14",
  "opencv-python-headless>=4.10.0.84",
  "pdf2image>=1.17.0",
  "Pillow>=11.0.0",
  "pytesseract>=0.3.13",
  "spacy>=3.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-timeout>=2.3.1",
  "httpx>=0.28.0",
  "ruff>=0.8.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
timeout_method = "thread"
markers = [
  "slow: Docker/Tesseract/OCR integration tests that are excluded from default fast runs",
  "integration: Core product-flow integration tests (pipeline, review, batch, reports)",
]
